[package]
name = "marquee"
version = "0.1.0"
authors = ["Merry Mou <moumerry@gmail.com>"]
edition = "2018"

[dependencies]
embedded-graphics={path="../../others/embedded-graphics/embedded-graphics", features=["bmp"]}
# {git="https://github.com/evq/embedded-graphics.git", branch="fix_bmp_stride", features=["bmp"]}
piston2d-graphics="0.32.0"
rpi-led-matrix={path="../../others/rust-rpi-rgb-led-matrix"}
#{git="https://github.com/mmou/rust-rpi-rgb-led-matrix.git"}
rosc = "~0.1"
rand  = "0.7.0"
